--- a/style.css
+++ b/style.css
@@ -1,27 +1,46 @@
 html {
 background: green;
+background-image: url("fern.jpg");
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Bowlby+One+SC&display=swap');
-
 #myDIV {
-  width: 400px;
-  height: 50px;
-  background: green;
+  width: 250px;
+  height: 600px;
+  background: #3a6e00;
   animation: mymove 5s infinite;
+  border-radius: 5px;
 }
 
 @keyframes mymove {
-  from {background-color: green;}
-  to {background-color: blue;}
+  from {background-color: #3a6e00;}
+  to {background-color: #a2bd50;}
+  
+}
+
+iframe{
+ display: block;
+ margin-left: auto;
+ margin-right: auto;
+ margin-top: 5px;
+}
+
+.box_4 img{
+border-radius: 10px;
+padding-left: 30px;
+}
+
+
+.responsive{
+width: 100%;
+height: auto;
+border-radius: 5px:
 }
 
 
 .wrapper {
-
 height: auto;
 display: grid;
-grid-template-rows: 200px 100px 500px 50px 20px ;
+grid-template-rows: 200px 100px 600px 50px 20px ;
 grid-template-columns: 250px 700px 400px 20px;
 padding-top: 30px;
 padding-left: 30px;
@@ -31,12 +50,14 @@ row-gap: 10px;
 }
 
 h1{
-font-family: 'Miltonian Tattoo', cursive;
-padding: 10px;
+font-family: 'Dosis', sans-serif;
+padding-left: 10px;
+padding-top: 10px;
+color: green;
 }
 p{
 font-family: 'Baloo Bhaina 2', cursive;
-padding: 10px;
+padding-left: 10px;
 }
 
 
@@ -51,7 +72,8 @@ border-radius: 5px;
 }
 
 .nav {
-background-color: white;
+background-repeat: no-repeat;
+background-color: #97bb23;
 grid-column: 1;
 grid-row: 2;
 grid-row-end: 3;
@@ -93,18 +115,20 @@ margin: 0;
 .dropdown-content{
 display: none;
 position: absolute;
-background-color: #ff6161;
+background-color: green;
 min-width: 50px;
 z-index: 1;
+border-radius: 10px;
 }
 
 .dropdown-content a{
 float: none;
 color: black;
-background-color: #ff6161;
+background-color: green;
 text-decoration: none;
 display: block;
 text-align: left;
+border-radius: 10px;
 }
 
 .dropdown:hover .dropdown-content{
@@ -112,7 +136,15 @@ display: block;
 }
 
 .box_2 {
-background-color: white;
+background-color: #eaf7dc;
+grid-column: 3;
+grid-row: 3;
+grid-row-end: 5;
+border: 1px;
+border-radius: 5px;
+}
+.ccbox_2 {
+background-color: #eaf7dc;
 grid-column: 3;
 grid-row: 3;
 grid-row-end: 5;
@@ -121,7 +153,14 @@ border-radius: 5px;
 }
 
 .box_3 {
-background-color: white;
+background-color: #d2f5ab;
+grid-column: 1;
+grid-row: 3;
+border: 1px;
+border-radius: 5px;
+}
+.ccbox_3 {
+background-color: #d2f5ab;
 grid-column: 1;
 grid-row: 3;
 border: 1px;
@@ -129,7 +168,15 @@ border-radius: 5px;
 }
 
 .box_4 {
-background-color: white;
+background-color: #d2f5ab;
+grid-column-start: 2;
+grid-column-end: 3;
+grid-row: 3;
+border: 1px;
+border-radius: 5px;
+}
+.ccbox_4 {
+background-color: #d2f5ab;
 grid-column-start: 2;
 grid-column-end: 3;
 grid-row: 3;
@@ -138,7 +185,15 @@ border-radius: 5px;
 }
 
 .box_5 {
-background-color: white;
+background-color: #97bb23;
+grid-column: 1/4;
+grid-column-end: 3;
+grid-row: 4;
+border: 1px;
+border-radius: 5px;
+}
+.ccbox_5 {
+background-color: #97bb23;
 grid-column: 1/4;
 grid-column-end: 3;
 grid-row: 4;
